--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -56,7 +56,7 @@ jobs:
           file: Dockerfile
           platforms: linux/amd64,linux/arm64
           build-args: |
-            BUILD_PHP=${{ github.ref_type == 'tag' && steps.metadata.outputs.tags || '' }}
+            BUILD_PHP=${{ github.ref_type == 'tag' && steps.metadata.outputs.tags || '8.0' }}
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.metadata.outputs.tags }}
           labels: ${{ steps.metadata.outputs.labels }}
