--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -11,6 +11,7 @@ jobs:
   pipeline:
     runs-on: ubuntu-latest
     name: Pipeline
+    timeout-minutes: 30
 
     steps:
       - name: Checkout Code
