use the ref_name instead

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -59,7 +59,7 @@ jobs:
           file: Dockerfile
           platforms: linux/amd64,linux/arm64
           build-args: |
-            BUILD_PHP=${{ github.ref_type == 'tag' && steps.metadata.outputs.tags || env.DEFAULT_PHP_VERSION }}
+            BUILD_PHP=${{ github.ref_type == 'tag' && github.ref_name || env.DEFAULT_PHP_VERSION }}
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.metadata.outputs.tags }}
           labels: ${{ steps.metadata.outputs.labels }}
